# github-copilot-demo-python

./: .env.example  .gitignore  Dockerfile  GitDEMO.html  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: README.md  python-code-review.agent.md  python-debug-failure.agent.md  python-docstrings.agent.md  python-feature-starter.agent.md  python-lab-coach.agent.md  python-onboarding.agent.md  python-oop-pep8-review.agent.md  python-prompt-improver.agent.md  python-refactor-safe.agent.md  python-test-generator.agent.md
.github/prompts/: README.md  python-code-review.prompt.md  python-debug-failure.prompt.md  python-docstrings.prompt.md  python-feature-starter.prompt.md  python-lab-coach.prompt.md  python-onboarding.prompt.md  python-oop-pep8-review.prompt.md  python-prompt-improver.prompt.md  python-refactor-safe.prompt.md  python-test-generator.prompt.md
.github/workflows/: ci.yml  enable-auto-merge.yml
src/app/: __init__.py  config.py  registry.py  server.py  types.py
src/app/shared/: __init__.py  errors.py  filesystem.py  http.py  sql.py
tests/: test_config.py  test_filesystem.py  test_registry.py  test_server.py  test_sql.py  test_workspace_client.py
training/: __init__.py  copilot-python-prompt-cheatsheet.md  github-agent-pr-demo.md  github-copilot-python-workshop.md
training/lab/: README.md  __init__.py
training/lab/reference/: __init__.py  order_summary_reference.py  test_order_summary.py
training/oop_demo/: README.md  __init__.py  flawed_inventory.py  test_inventory_demo.py
(+18 files in other folders)
